--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,17 @@
     box-sizing: border-box;
 }
 
+img {
+    display: block;
+}
+
+button {
+    font: inherit;
+    outline: transparent;
+    border: transparent;
+    padding: 0.5rem;
+}
+
 :root {
     /* FONT */
     --FF: 'Overpass', sans-serif;
@@ -26,23 +37,91 @@ body {
     min-height: 100vh;
     display: grid;
     place-content: center;
-    padding: 1rem;
+    padding: 0.5rem;
     font: var(--FONT);
     color: var(--PARA-COLOR);
     background-color: var(--VERY-DARK-BLUE);
 }
 
 main {
-    max-width: 400px;
-    padding: 1rem;
+    max-width: 375px;
+    padding: 1.25rem;
     border: 1px solid red;
+    border-radius: 1.5rem;
+    background-color: var(--DARK-BLUE);
+}
+
+h1,
+h3 {
+    color: var(--HEADING-COLOR);
 }
 
 .page {
     display: flex;
     flex-flow: column;
-    border: 1px solid blue;
+    /* border: 1px solid blue; */
     gap: 1rem;
+}
+
+.first-page figure {
+    max-width: fit-content;
+    border: 1px solid orange;
+    padding: .75rem;
+    border-radius: 50%;
+    background-color: orange;
+    margin-block-end: 0.5rem;
+}
+
+.first-page section {
+    margin-block: 0.5rem 0.25rem;
+    display: flex;
+    justify-content: space-between;
+}
+
+.first-page .rating {
+    display: grid;
+    place-content: center;
+    border-radius: 50%;
+    width: 3rem;
+    height: 3rem;
+    background-color: var(--MEDIUM-GREY);
+}
+
+.first-page .rating:hover {
+    background-color: var(--BTN-COLOR);
+}
+
+.first-page>button {
+    border-radius: 1rem;
+}
+
+/* .first-page {
+     display: none;
+} */
+
+.second-page {
+    display: none;
+    text-align: center;
+}
+
+.second-page h2 {
+    font: inherit;
+    border-radius: 30px;
+    text-align: center;
+    max-width: fit-content;
+    padding: 0.25rem 0.5rem;
+    border: 1px solid grey;
+    color: var(--BTN-COLOR);
+    margin-inline: auto;
+}
+
+.second-page img {
+    margin-inline: auto;
+}
+
+.second-page>h3 {
+    text-align: center;
+    font-size: 1.5rem;
 }
 
 .attribution {
