--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,7 @@ button {
 }
 
 body {
+    position: relative;
     min-height: 100vh;
     display: grid;
     place-content: center;
@@ -135,7 +136,9 @@ h3 {
 }
 
 .attribution {
-    display: none;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
     font-size: 11px;
     text-align: center;
 }
