--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,7 @@ h3 {
     margin-block-end: 0.5rem;
 }
 
-.first-page section {
+.first-page div {
     margin-block: 0.5rem 0.25rem;
     display: flex;
     justify-content: space-between;
