added some margin and padding to the component

--- a/css/style.css
+++ b/css/style.css
@@ -45,8 +45,8 @@ body {
 }
 
 main {
-    max-width: 375px;
-    padding: 1.25rem;
+    max-width: 390px;
+    padding: 1.5rem;
     background: linear-gradient(var(--DARK-BLUE), rgba(34, 42, 53, 255));
     border-radius: 1.5rem;
 }
@@ -59,7 +59,7 @@ h3 {
 .page {
     display: flex;
     flex-flow: column;
-    gap: 1rem;
+    gap: 1.5rem;
 }
 
 .first-page figure {
@@ -124,9 +124,16 @@ h2 {
     margin-inline: auto;
 }
 
+.second-page figure {
+    margin-top: 1rem;
+}
+
 .second-page img {
     margin-inline: auto;
-    margin-block: 0.75rem 0.5rem;
+}
+
+.second-page p {
+    margin-bottom: 0.5rem;
 }
 
 h3 {
